--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ p {
 #Picture5 {
     position: relative;
     height: 150px;
-    width: 100px;
+    width: 200px;
     margin: 50px;
 }
 
@@ -156,6 +156,7 @@ p {
     position: relative;
     float: left;
     margin: 10px;
+    background-color: grey;
 }
 
 #text-block {
@@ -175,7 +176,7 @@ p {
 }
 
 #text-block2 {
-    position: relative;
+    position: absolute;
     top: 50%;
     margin-left: 50px;
     width: 200px;
